frontend/test/should_fail/exec_001.grg
using enum_model_001;

rule r1 {
  x:A;
  modify{
    exec(r1(x));
  }
}

